@startuml

title __FAVORITELIST's Class Diagram__\n

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace favoriteList {
        class com.pis.buy2gether.usecases.home.favoriteList.FavoriteFragment {
            + deleteFavorite()
            + onClick()
            + onCreateView()
            + onDestroyView()
            + onItemClick()
            - setList()
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace favoriteList {
        class com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter {
            - groupChecked : LinkedHashMap<String, Boolean>
            - groupImage : LinkedHashMap<String, Bitmap>
            - groups : LinkedHashMap<String, String>
            - mInflater : LayoutInflater
            + addGroup()
            + getItemCount()
            + onBindViewHolder()
            + onCreateViewHolder()
            + removeGroup()
            ~ FavoriteListAdapter()
            ~ getItem()
            ~ isChecked()
            ~ setClickListener()
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace favoriteList {
        interface com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter.ItemClickListener {
            {abstract} + onItemClick()
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace favoriteList {
        class com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter.ViewHolder {
            ~ checked : RadioButton
            ~ imageView : ImageView
            ~ myTextView : TextView
            + onClick()
            ~ ViewHolder()
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace favoriteList {
        class com.pis.buy2gether.usecases.home.favoriteList.FavoriteViewModel {
            + FavoriteViewModel()
            + delete()
            + getFavorite()
            + getGroup()
            + getUser()
        }
      }
    }
  }
  

  com.pis.buy2gether.usecases.home.favoriteList.FavoriteFragment .up.|> android.view.View.OnClickListener
  com.pis.buy2gether.usecases.home.favoriteList.FavoriteFragment .up.|> com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter.ItemClickListener
  com.pis.buy2gether.usecases.home.favoriteList.FavoriteFragment -up-|> androidx.fragment.app.Fragment
  com.pis.buy2gether.usecases.home.favoriteList.FavoriteFragment o-- com.pis.buy2gether.databinding.FragmentFavoriteListBinding : binding
  com.pis.buy2gether.usecases.home.favoriteList.FavoriteFragment o-- com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter : favoriteListAdapter
  com.pis.buy2gether.usecases.home.favoriteList.FavoriteFragment o-- com.pis.buy2gether.usecases.home.favoriteList.FavoriteViewModel : favoriteViewModel
  com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter o-- com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter.ItemClickListener : mClickListener
  com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter +-down- com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter.ItemClickListener
  com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter +-down- com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter.ViewHolder
  com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter.ViewHolder .up.|> android.view.View.OnClickListener
  com.pis.buy2gether.usecases.home.favoriteList.FavoriteListAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.pis.buy2gether.usecases.home.favoriteList.FavoriteViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
